# sakurastudio

./: .env.example  .gitignore  README.md
catalog/: README.md  SCHEMA.md
catalog/_meta/: catalog.yaml  github_projects.yaml
catalog/characters/: chr.example.hiro.yaml  chr.example.protagonist.yaml  chr.par.hana.yaml  chr.par.kaito.yaml  chr.par.kirara.yaml  chr.sakura_match.miko.yaml  chr.sakura_match.system.yaml  chr.tea.akira.yaml  chr.tea.keeper.yaml  chr.tea.mizu.yaml  chr.tea.ren.yaml
catalog/engines/: threejs_golf.yaml  threejs_tea_house.yaml  unity_match3.yaml  unity_otome.yaml
catalog/schemas/: CHANGELOG.md  asset.schema.json  bindings.schema.json  brand.schema.json  cast.schema.json  catalog_meta.schema.json  character.schema.json  common.json  engine.schema.json  ggd.schema.json  job.schema.json  levels.schema.json  slots.schema.json  title.schema.json
docs/: ELEVENLABS-RUNTIME.md  GDD-DASHBOARD-GAP.md  MIDNIGHT-PAR-CHARACTER-PIPELINE.md  STUDIO-FLOW.md  STUDIO-GAME-ASSETS.md  STUDIO-IMAGINE.md
integrations/unity-sakura-match/: CatalogBindings.cs  README.md  Tile.cs
tools/sakura/: README.md  pyproject.toml
tools/sakura/src/sakura/: __init__.py  anim_harvest.py  asset_write.py  bind.py  cli.py  code_graph.py  cross_validate.py  dialogue_edit.py  elevenlabs_client.py  export_game.py  flow_graph.py  game_assets.py  github_projects.py  imagine_client.py  import_unity.py  loader.py  models.py  schema_validate.py  studio_app.py  studio_server.py  studio_style.py  sync_tea_house.py  tts.py  validate.py  video_client.py  voice_map.py  yaml_io.py
(+147 files in other folders)
