[project]
name = "sakura-catalog"
version = "0.5.3"
description = "Sakura Soft catalog CLI (validate, bind, import, studio, TTS)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jsonschema>=4.22.0",
  "pyyaml>=6.0.1",
  "referencing>=0.35.0",
  "pillow>=10.0.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "python-multipart>=0.0.9",
]

[project.scripts]
sakura = "sakura.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sakura"]

[tool.hatch.build.targets.sdist]
include = ["src/sakura"]
